Результат работы на выходных. Следующее RBAC

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@
 #header h1
 {
 	padding-top: 15px;
+	text-align: center;
 }
 #reg
 {
@@ -27,6 +28,7 @@
 #logo
 {
 	padding-left: 33px;
+	padding-top: 3px;
 }
 #title
 {
@@ -36,7 +38,8 @@
 }
 #gerb
 {
-	text-align: center;
+	text-align: right;
+	padding-right: 35px;
 }
 .panel-heading
 {
@@ -177,6 +180,19 @@ section
 	text-align: right;
 	text-shadow: 0 0 2px black;
 }
+#add_date
+{
+	text-align: left;
+	padding-top: 10px;
+}
+#price
+{
+	text-align: center;
+	color: red;
+	font-size: 1.1em;
+	font-weight: bold;
+	padding-top: 10px;
+}
 footer
 {
 	height: 40px;
@@ -206,4 +222,47 @@ ul
 	.slicknav_menu {
 		display:block;
 	}
+}
+/* old styles */
+div.flash-error, div.flash-notice, div.flash-success
+{
+	padding:.8em;
+	margin-bottom:1em;
+	border:2px solid #ddd;
+}
+
+div.flash-error
+{
+	background:#FBE3E4;
+	color:#8a1f11;
+	border-color:#FBC2C4;
+}
+
+div.flash-notice
+{
+	background:#FFF6BF;
+	color:#514721;
+	border-color:#FFD324;
+}
+
+div.flash-success
+{
+	background:#E6EFC2;
+	color:#264409;
+	border-color:#C6D880;
+}
+
+div.flash-error a
+{
+	color:#8a1f11;
+}
+
+div.flash-notice a
+{
+	color:#514721;
+}
+
+div.flash-success a
+{
+	color:#264409;
 }
