--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@
 	color: #00ACFF;
 	font-style: italic;
 	text-shadow: -1px 1px 2px black;
+	background: url(../images/back-advert3.png) center no-repeat;
 }
 #gerb
 {
