--- a/css/styles.css
+++ b/css/styles.css
@@ -4,15 +4,11 @@
 	border-left: 1px dotted black;
 	border-right: 1px dotted black;
 	box-shadow: 0 0 2px black;
+	overflow: hidden;
 }
 #header
 {
 	
-}
-#header h1
-{
-	padding-top: 15px;
-	text-align: center;
 }
 #reg
 {
@@ -34,13 +30,28 @@
 {
 	color: #00ACFF;
 	font-style: italic;
-	text-shadow: -1px 1px 2px black;
-	background: url(../images/back-advert3.png) center no-repeat;
+	text-shadow: -2px 2px 3px black;
+	text-align: center;
+	
+	
+}
+#title h1
+{
+	text-align: center;
+	margin: 0;
+	padding: 0;
+	font-weight: bold;
 }
 #gerb
 {
 	text-align: right;
 	padding-right: 35px;
+}
+#welcome
+{
+	color: red;
+	text-shadow: -1px 1px 1px black;
+	font-weight: bold;
 }
 .panel-heading
 {
